# Messenger

./: CMakeLists.txt  README.md
MClient/: CMakeLists.txt  main.cpp
MNetworking/: CMakeLists.txt
MNetworking/include/MNetworking/client/: tcp_client.h
MNetworking/include/MNetworking/server/: server.h  tcp_connection.h
MNetworking/src/client/: tcp_client.cpp
MNetworking/src/server/: server.cpp  tcp_connection.cpp
MServer/: CMakeLists.txt  main.cpp
